--- a/src/markdown/mas/dubbeltellingen.Rmd
+++ b/src/markdown/mas/dubbeltellingen.Rmd
@@ -1001,10 +1001,9 @@ sd_plotperiode <- sum_soorten1$random$`plotnaam:periode_in_jaar`$Estimate
 sd_res <- sum_soorten1$spec_pars$Estimate
 
 icc_plot <- (sd_plot^2) / (sd_plot^2 + sd_plotperiode^2 + sd_res^2)
-icc_plotperiode <- (sd_plotperiode^2) / (sd_plot^2 + sd_plotperiode^2 + sd_res^2)
 ```
 
-De correlatie tussen observaties binnen een zelfde plot is relatief laag (ICC = `r round(icc_plot, 3)`) en ook de correlatie tussen observaties binnen eenzelfde periode in eenzelfde plot (ICC = `r round(icc_plotperiode, 3)`). We testen of we de random effects kunnen weglaten. Hiervoor fitten we een model zonder random effect van plot en zonder enig random effect.
+De correlatie tussen observaties binnen een zelfde plot is relatief laag (ICC = `r round(icc_plot, 3)`). We testen of we de random effects van plot kunnen weglaten. Hiervoor fitten we een model zonder random effect van plot. We behouden wel het random effect `plotnaam:periode_in_jaar` omdat we met gepaarde data zitten.
 
 ```{r}
 dubbel_soorten_norm12 <- brm(
@@ -1014,42 +1013,27 @@ dubbel_soorten_norm12 <- brm(
   file = paste0(model_path, "dubbel_soorten_norm12"),
   file_refit = "on_change")
 
-dubbel_soorten_norm13 <- brm(
-  bf(n ~ status), 
-  data = dubbels_2022_df_soortenrijkdom, family = gaussian(), seed = 1234,
-  chains = nchains, warmup = burnin, iter = niter, cores = nparallel,
-  file = paste0(model_path, "dubbel_soorten_norm13"),
-  file_refit = "on_change")
-
 # Perform leave-one-out cross-validation
 if (!file.exists(paste0(model_path, "fit_dubbel_soorten_norm12.rds"))) {
   fit_dubbel_soorten_norm12 <- add_criterion(dubbel_soorten_norm12, 
     criterion = c("loo"), 
     file = paste0(model_path, "fit_dubbel_soorten_norm12"))
-  fit_dubbel_soorten_norm13 <- add_criterion(dubbel_soorten_norm13, 
-    criterion = c("loo"), 
-    file = paste0(model_path, "fit_dubbel_soorten_norm13"))
 } else {
   fit_dubbel_soorten_norm12 <- readRDS(paste0(model_path, 
                                              "fit_dubbel_soorten_norm12.rds"))
-  fit_dubbel_soorten_norm13 <- readRDS(paste0(model_path, 
-                                             "fit_dubbel_soorten_norm13.rds"))
 }
 
 # Comparison among models
 models_norm <- data.frame(
-  naam = c("geen random effects", 
-           "plotnaam:periode_in_jaar", 
+  naam = c("plotnaam:periode_in_jaar", 
            "plotnaam en plotnaam:periode_in_jaar"),
-  model = c("fit_dubbel_soorten_norm13", 
-            "fit_dubbel_soorten_norm12", 
+  model = c("fit_dubbel_soorten_norm12", 
             "fit_dubbel_soorten_norm1"))
 
 
 loo_compare(
     fit_dubbel_soorten_norm1, 
-    fit_dubbel_soorten_norm12, 
-    fit_dubbel_soorten_norm13, 
+    fit_dubbel_soorten_norm12,
     criterion = "loo") %>%
   as.data.frame() %>%
   rownames_to_column("model") %>%
@@ -1061,10 +1045,10 @@ loo_compare(
   kable(digits = 3)
 ```
 
-We beschouwen het finale model zonder random effects.
+We beschouwen het finale model met enkel random effects `plotnaam:periode_in_jaar`.
 
 ```{r}
-finaal_soorten1 <- fit_dubbel_soorten_norm13
+finaal_soorten1 <- fit_dubbel_soorten_norm12
 ```
 
 #### Resultaten finale model
@@ -1289,7 +1273,7 @@ icc_plot <- (sd_plot^2) / (sd_plot^2 + sd_plotperiode^2 + sd_res^2)
 icc_plotperiode <- (sd_plotperiode^2) / (sd_plot^2 + sd_plotperiode^2 + sd_res^2)
 ```
 
-De correlatie tussen observaties binnen een zelfde plot is relatief hoog (ICC = `r round(icc_plot, 3)`) en de correlatie tussen observaties binnen eenzelfde periode in eenzelfde plot niet ((ICC = `r round(icc_plotperiode, 3)`)). We testen of we de random effects kunnen weglaten. Hiervoor fitten we een model zonder random effect van plot en zonder enig random effect.
+De correlatie tussen observaties binnen een zelfde plot is relatief hoog (ICC = `r round(icc_plot, 3)`). We testen of we deze random effects kunnen weglaten.
 
 ```{r}
 dubbel_waarnemingen_norm12 <- brm(
@@ -1299,42 +1283,27 @@ dubbel_waarnemingen_norm12 <- brm(
   file = paste0(model_path, "dubbel_waarnemingen_norm12"),
   file_refit = "on_change")
 
-dubbel_waarnemingen_norm13 <- brm(
-  bf(n ~ status), 
-  data = dubbels_2022_df_waarnemingen, family = gaussian(), seed = 1234,
-  chains = nchains, warmup = burnin, iter = niter, cores = nparallel,
-  file = paste0(model_path, "dubbel_waarnemingen_norm13"),
-  file_refit = "on_change")
-
 # Perform leave-one-out cross-validation
 if (!file.exists(paste0(model_path, "fit_dubbel_waarnemingen_norm12.rds"))) {
   fit_dubbel_waarnemingen_norm12 <- add_criterion(dubbel_waarnemingen_norm12, 
     criterion = c("loo"), 
     file = paste0(model_path, "fit_dubbel_waarnemingen_norm12"))
-  fit_dubbel_waarnemingen_norm13 <- add_criterion(dubbel_waarnemingen_norm13, 
-    criterion = c("loo"), 
-    file = paste0(model_path, "fit_dubbel_waarnemingen_norm13"))
 } else {
   fit_dubbel_waarnemingen_norm12 <- readRDS(paste0(model_path, 
                                              "fit_dubbel_waarnemingen_norm12.rds"))
-  fit_dubbel_waarnemingen_norm13 <- readRDS(paste0(model_path, 
-                                             "fit_dubbel_waarnemingen_norm13.rds"))
 }
 
 # Comparison among models
 models_norm <- data.frame(
-  naam = c("geen random effects", 
-           "plotnaam:periode_in_jaar", 
+  naam = c("plotnaam:periode_in_jaar", 
            "plotnaam en plotnaam:periode_in_jaar"),
-  model = c("fit_dubbel_waarnemingen_norm13", 
-            "fit_dubbel_waarnemingen_norm12", 
+  model = c("fit_dubbel_waarnemingen_norm12", 
             "fit_dubbel_waarnemingen_norm1"))
 
 
 loo_compare(
     fit_dubbel_waarnemingen_norm1, 
-    fit_dubbel_waarnemingen_norm12, 
-    fit_dubbel_waarnemingen_norm13, 
+    fit_dubbel_waarnemingen_norm12,
     criterion = "loo") %>%
   as.data.frame() %>%
   rownames_to_column("model") %>%
@@ -1346,7 +1315,7 @@ loo_compare(
   kable(digits = 3)
 ```
 
-We beschouwen het finale model met random effects.
+We beschouwen het finale model met random effects `plotnaam` en `plotnaam:periode_in_jaar`.
 
 ```{r}
 finaal_waarnemingen1 <- fit_dubbel_waarnemingen_norm1
@@ -1383,8 +1352,6 @@ sign_waarnemingen1 <- ifelse(sum_finaal_waarnemingen1$fixed["statusvrijwilliger"
 ```
 
 We besluiten dat de vrijwillige tellers gemiddeld `r schatting_waarnemingen1` waarnemingen `r sign_waarnemingen1` melden dan de professionele teller (95% credible interval: `r ll_waarnemingen1` tot `r ul_waarnemingen1`).  
-  
-https://discourse.mc-stan.org/t/using-brms-to-create-generated-quantities-stan-code-block/11766/10
 
 
 # Verschil in broedcode
@@ -1822,42 +1789,27 @@ dubbel_soorten_pois22 <- brm(
   file = paste0(model_path, "dubbel_soorten_pois22"),
   file_refit = "on_change")
 
-dubbel_soorten_pois23 <- brm(
-  bf(n ~ status*broedcode), 
-  data = dubbels_2022_df_broed_soortenrijkdom, family = gaussian(), seed = 1234,
-  chains = nchains, warmup = burnin, iter = niter, cores = nparallel,
-  file = paste0(model_path, "dubbel_soorten_pois23"),
-  file_refit = "on_change")
-
 # Perform leave-one-out cross-validation
 if (!file.exists(paste0(model_path, "fit_dubbel_soorten_pois22.rds"))) {
   fit_dubbel_soorten_pois22 <- add_criterion(dubbel_soorten_pois22, 
     criterion = c("loo"), 
     file = paste0(model_path, "fit_dubbel_soorten_pois22"))
-  fit_dubbel_soorten_pois23 <- add_criterion(dubbel_soorten_pois23, 
-    criterion = c("loo"), 
-    file = paste0(model_path, "fit_dubbel_soorten_pois23"))
 } else {
   fit_dubbel_soorten_pois22 <- readRDS(paste0(model_path, 
                                              "fit_dubbel_soorten_pois22.rds"))
-  fit_dubbel_soorten_pois23 <- readRDS(paste0(model_path, 
-                                             "fit_dubbel_soorten_pois23.rds"))
 }
 
 # Comparison among models
 models_norm <- data.frame(
-  naam = c("geen random effects", 
-           "plotnaam:periode_in_jaar", 
+  naam = c("plotnaam:periode_in_jaar", 
            "plotnaam en plotnaam:periode_in_jaar"),
-  model = c("fit_dubbel_soorten_pois23", 
-            "fit_dubbel_soorten_pois22", 
+  model = c("fit_dubbel_soorten_pois22", 
             "fit_dubbel_soorten_pois2"))
 
 
 loo_compare(
     fit_dubbel_soorten_pois2, 
     fit_dubbel_soorten_pois22, 
-    fit_dubbel_soorten_pois23, 
     criterion = "loo") %>%
   as.data.frame() %>%
   rownames_to_column("model") %>%
@@ -1869,7 +1821,7 @@ loo_compare(
   kable(digits = 3)
 ```
 
-We beschouwen het finale model met random effects.
+We beschouwen het finale model met random effects `plotnaam` en `plotnaam:periode_in_jaar`.
 
 ```{r}
 finaal_soorten2 <- fit_dubbel_soorten_pois2
@@ -1979,7 +1931,8 @@ De exploratieve figuren tonen eenzelfde trend voor aantal waarnemingen. Dit is l
 
 ## Waarnemingen
 
-We controleren kwantificeren dit effect ook voor aantal waarnemingen ...
+We controleren en kwantificeren dit effect ook voor aantal waarnemingen.
+
 
 
 # Verschil in ervaring
@@ -2075,6 +2028,7 @@ dubbel_soorten_norm3 <- brm(
   bf(n ~ status*ervaring_plot + (1 | plotnaam) + (1 | plotnaam:periode_in_jaar)), 
   data = df_ervaring, family = gaussian(), seed = 1234,
   chains = nchains, warmup = burnin, iter = niter, cores = nparallel,
+  control = list(adapt_delta = 0.9),
   file = paste0(model_path, "dubbel_soorten_norm3"),
   file_refit = "on_change")
 
@@ -2168,7 +2122,7 @@ pp_check(fit_dubbel_soorten_negbin3, type = "bars_grouped", ndraws = 100,
          group = "statuservaring", facet_args = list(ncol = 1, scales = "free_y"))
 ```
 
-Hoewel we de fit niet ideaal is, besluiten we dat de Poisson verdeling het beste past bij de data. Een normaalverdeling zou in dit geval ook negatieve waarnemingen toelaten (dit was geen probleem bij enkel broedcode > 0 omdat de aantallen daar hoger lagen). De resultaten voor alle drie de modellen zijn gelijkaardig.
+Hoewel we de fit niet ideaal is, besluiten we dat de Normaal verdeling het beste past bij de data.
   
 We zien goede convergentie.
 
@@ -2177,6 +2131,62 @@ plot(fit_dubbel_soorten_norm3)
 ```
 
 
+### Selectie random effects
+
+```{r}
+dubbel_soorten_norm32 <- brm(
+  bf(n ~ status*ervaring_plot + (1 | plotnaam:periode_in_jaar)),
+  data = df_ervaring, family = gaussian(), seed = 1234,
+  chains = nchains, warmup = burnin, iter = niter, cores = nparallel,
+  control = list(adapt_delta = 0.9),
+  file = paste0(model_path, "dubbel_soorten_norm32"),
+  file_refit = "on_change")
+
+# Perform leave-one-out cross-validation
+if (!file.exists(paste0(model_path, "fit_dubbel_soorten_norm32.rds"))) {
+  fit_dubbel_soorten_norm32 <- add_criterion(dubbel_soorten_norm32, 
+    criterion = c("loo"), 
+    file = paste0(model_path, "fit_dubbel_soorten_norm32"))
+} else {
+  fit_dubbel_soorten_norm32 <- readRDS(paste0(model_path, 
+                                             "fit_dubbel_soorten_norm32.rds"))
+}
+
+# Comparison among models
+models_norm3 <- data.frame(
+  naam = c("plotnaam:periode_in_jaar", 
+           "plotnaam en plotnaam:periode_in_jaar"),
+  model = c("fit_dubbel_soorten_norm32", 
+            "fit_dubbel_soorten_norm3"))
+
+
+loo_compare( 
+    fit_dubbel_soorten_norm32, 
+    fit_dubbel_soorten_norm3, 
+    criterion = "loo") %>%
+  as.data.frame() %>%
+  rownames_to_column("model") %>%
+  left_join(models_norm3, by = "model") %>%
+  select(model = naam, elpd_loo, p_loo, looic, elpd_diff, se_diff) %>%
+  mutate(CI_ll = elpd_diff  + qnorm(0.025) * se_diff,
+         CI_ul = elpd_diff  + qnorm(0.975) * se_diff) %>%
+  arrange(desc(elpd_diff)) %>%
+  kable(digits = 3)
+```
+
+We beschouwen het finale model met random effects `plotnaam:periode_in_jaar`.
+
+```{r}
+finaal_soorten3 <- fit_dubbel_soorten_norm32
+```
+
+
+### Resultaten finale model
+
+```{r}
+sum_finaal_soorten3 <- summary(fit_dubbel_soorten_norm32)
+sum_finaal_soorten3
+```
 
 
 $$
@@ -2195,13 +2205,26 @@ $$
 
 ```{r}
 effect_ervaring <- hypothesis(
-  x = test2,
+  x = finaal_soorten3,
   "ervaring_plotervarenplots + statusvrijwilliger:ervaring_plotervarenplots = 0",
   class = "b", alpha = 0.05)
 
 effect_ervaring
 plot(effect_ervaring)
 ```
+
+## Conclusie
+
+```{r, include=FALSE}
+ll_soorten3_ervaring <- round(effect_ervaring$hypothesis$CI.Lower, 3)
+ul_soorten3_ervaring <- round(effect_ervaring$hypothesis$CI.Upper, 3)
+```
+
+Er is geen significant verschil in aantal soorten gezien door beginnende vs. ervaren vrijwilligers (95% CI `r ll_soorten3_ervaring` tot `r ul_soorten3_ervaring`).
+
+## Waarnemingen
+
+We controleren en kwantificeren dit effect ook voor aantal waarnemingen.
 
 
 # Correlatie aantal soorten en aantal waarnemingen
